# llmprivacygateway

./: .coverage  AGENTS.md  README.md  pyproject.toml
.qoder/repowiki/zh/content/: 审计日志系统.md  开发者指南.md  故障排除与常见问题.md  架构设计.md  测试策略与质量保证.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.qwen/: settings.json
doc/design/: design-update-20260404-v1.0-init.md
doc/manual/phase-1/: manual.md
doc/req/: req-init-20260401.md
doc/rules/: architecture-rule.md  coding-rule.md
doc/test/tcs/v1.0/: 01_cli_commands.md  01_cli_commands_testdata.md  02_proxy_service.md  02_proxy_service_testdata.md  03_key_management.md  03_key_management_testdata.md  04_pii_detection.md  04_pii_detection_testdata.md  05_rule_management.md  05_rule_management_testdata.md  06_audit_logging.md  06_audit_logging_testdata.md  07_configuration.md  07_configuration_testdata.md  08_e2e_integration.md  08_e2e_integration_testdata.md  README.md
doc/test/test-client/: README.md  chatbot.py  config.yaml  memory.md
rules/: credentials.yaml  pii.yaml
src/llm_privacy_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/lpg/: __init__.py  __main__.py
src/lpg/cli/: __init__.py  main.py
src/lpg/cli/commands/: config.py  key.py  log.py  provider.py  (+4 more)
src/lpg/core/: __init__.py  service_facade.py
src/lpg/models/: __init__.py  config.py
src/lpg/utils/: __init__.py  crypto.py
tests/: conftest.py
tests/integration/: test_cli_commands.py  test_service_facade.py
tests/unit/: test_audit_service.py  test_config_service.py  test_key_manager.py  test_rule_manager.py
(+75 files in other folders)
